# nekowin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  USAGE.md  compile_flags.txt  glapp.make  glapp.vcxproj.filters  libnwin.lua  nwin.sln  nwin.vcxproj.filters  nwinpp.make  premake5.lua
.cache/clangd/index/: key_definitions.h.1ED2E9538371CCE1.idx  key_ev.c.4557F1D71059498A.idx  key_ev.h.E50FD2E592B4E084.idx  key_translation.c.09822375ADAB3A3D.idx  surface_window.h.2B3FE5C901501199.idx  vk_ext.c.1168261BC4FEF58D.idx  vk_ext.h.04D08E70F45F350D.idx  window.cpp.726576B646705ECF.idx  x11_surface.c.19962D80671BE939.idx
cmake/: glapp.cmake  gpdinfo.cmake  libnwin.cmake
include/: gamepad.h  input.h  key_definitions.h  key_ev.h  key_translation.h  limit_vc.h  napi.h  nekodll.h  nwin.h  nwin.hpp  nwin_bak.h  surface_window.h  vk.h  vk_ext.h  win32_gamepad.h  win32_surface.h  win32_translation.h  win32_window.h  window.h  window.hpp  x11_surface.h  x11_translation.h  x11_window.h  xkb_unicode.h
include/nwin/: gamepad.h  icon.h  input.h  neko_except.h  neko_window.h  nekogl.h  nwin.h  stb_image.h  x11_api.h  xkb_unicode.h
include/nwin/glad/: glad.h
premake/: glapp.lua  libnwin-shared.lua  libnwin-static.lua  libnwin.lua  libnwinpp.lua
src/: glad.c  glapp.cpp  gpdinfo.c  input.c  key_ev.c  key_translation.c  limit_vc.c  linux_gamepad.c  napi.c  nekoglx.c  nekowgl.c  nwin.c  nwin.cpp  vk.c  vk_ext.c  win32_gamepad.c  win32_surface.c  win32_translation.c  win32_window.c  window.cpp  x11_surface.c  x11_translation.c  x11_window.c  xkb_unicode.c
